// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiler (react) should build the example with config complete.json 1`] = `
Object {
  "1.cee7ea9abce823baf990.css": "16e4925d2f0de443907834b33b46394b",
  "1.cee7ea9abce823baf990.js": "fb98bc73e5bf09820dfc71e9a694db43",
  "1.cee7ea9abce823baf990.js.map": "cb7e806928f6052db8e9c9ff6e395790",
  "2.bf18163718a8126bae33.js": "8f9d8e8c9db493b414bed4793cc4de65",
  "2.bf18163718a8126bae33.js.map": "22d805fbd9fa24f53b067e640c8c5a30",
  "240683d2dd7c5a158ee48c70703a2a0a-1200.jpg": "240683d2dd7c5a158ee48c70703a2a0a",
  "5c917367a9adfba3f1e904ed920580be-600.jpg": "5c917367a9adfba3f1e904ed920580be",
  "8f42a999073e8fe5caf83406f0e1d690-1920.jpg": "8f42a999073e8fe5caf83406f0e1d690",
  "c29e3724f0ae14c777b61c09ee20e73b-300.jpg": "c29e3724f0ae14c777b61c09ee20e73b",
  "index.html": "1e83b3c35122019caa39490de855e96e",
  "main.6f53af50d0e7edf76fc3.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.6f53af50d0e7edf76fc3.js": "d7e363c289b315f46ce6f8e351898cf6",
  "main.6f53af50d0e7edf76fc3.js.map": "743497f85f8f0a953b71f79b209e71a2",
  "manifest.5331242021cd9f5a0938.js": "47eec6f49052bf28a3bb60df3b78f274",
  "manifest.5331242021cd9f5a0938.js.map": "10b1aa3ca188e7d40c2fb3ea903710f1",
  "sw.js": "315ab521f3544bbeb6194b0381e6cf34",
  "vendors.9641a7591b585946bdac.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.9641a7591b585946bdac.js": "8383cf11c0f30b449e4b2ccd58499e6f",
  "vendors.9641a7591b585946bdac.js.map": "44b01f556fa384004ca3c9dfd7bc3698",
}
`;

exports[`Compiler (react) should build the example with config disabled.json 1`] = `
Object {
  "1.cee7ea9abce823baf990.css": "16e4925d2f0de443907834b33b46394b",
  "1.cee7ea9abce823baf990.js": "fb98bc73e5bf09820dfc71e9a694db43",
  "1.cee7ea9abce823baf990.js.map": "cb7e806928f6052db8e9c9ff6e395790",
  "2.bf18163718a8126bae33.js": "8f9d8e8c9db493b414bed4793cc4de65",
  "2.bf18163718a8126bae33.js.map": "22d805fbd9fa24f53b067e640c8c5a30",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "index.html": "ddc93bc9b34803ae3fe6caf2eaefc889",
  "main.03d10cc98741821c8f44.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.03d10cc98741821c8f44.js": "61ea0610d112ac85dbbbf14c6f25f061",
  "main.03d10cc98741821c8f44.js.map": "c774234d2c22be1affb77b8b8e4388d1",
  "manifest.5331242021cd9f5a0938.js": "47eec6f49052bf28a3bb60df3b78f274",
  "manifest.5331242021cd9f5a0938.js.map": "10b1aa3ca188e7d40c2fb3ea903710f1",
  "sw.js": "a7d0695fdecc5fdcf7a7c1c64a0fc4a9",
  "vendors.9641a7591b585946bdac.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.9641a7591b585946bdac.js": "8383cf11c0f30b449e4b2ccd58499e6f",
  "vendors.9641a7591b585946bdac.js.map": "44b01f556fa384004ca3c9dfd7bc3698",
}
`;

exports[`Compiler (react) should build the example with config from package.json 1`] = `
Object {
  "1.cee7ea9abce823baf990.css": "16e4925d2f0de443907834b33b46394b",
  "1.cee7ea9abce823baf990.js": "fb98bc73e5bf09820dfc71e9a694db43",
  "1.cee7ea9abce823baf990.js.map": "cb7e806928f6052db8e9c9ff6e395790",
  "2.bf18163718a8126bae33.js": "8f9d8e8c9db493b414bed4793cc4de65",
  "2.bf18163718a8126bae33.js.map": "22d805fbd9fa24f53b067e640c8c5a30",
  "240683d2dd7c5a158ee48c70703a2a0a-1200.jpg": "240683d2dd7c5a158ee48c70703a2a0a",
  "5c917367a9adfba3f1e904ed920580be-600.jpg": "5c917367a9adfba3f1e904ed920580be",
  "8f42a999073e8fe5caf83406f0e1d690-1920.jpg": "8f42a999073e8fe5caf83406f0e1d690",
  "bar/index.html": "59f09c6ff6c95bc8fd45423fb679f62a",
  "c29e3724f0ae14c777b61c09ee20e73b-300.jpg": "c29e3724f0ae14c777b61c09ee20e73b",
  "icon_128x128.deb0a118869f6d69fcc5e9852ad32d81.png": "deb0a118869f6d69fcc5e9852ad32d81",
  "icon_192x192.f5d0f0f2ed01fca7cb69e70f6af11529.png": "f5d0f0f2ed01fca7cb69e70f6af11529",
  "icon_256x256.4661d370dd248c9f9d48e78c8a07776d.png": "4661d370dd248c9f9d48e78c8a07776d",
  "icon_96x96.1c0003f895382900e1a8ce6fa0a1b672.png": "1c0003f895382900e1a8ce6fa0a1b672",
  "index.html": "247a54ff7894efb81800c44aed9416e7",
  "main.6f53af50d0e7edf76fc3.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.6f53af50d0e7edf76fc3.js": "d7e363c289b315f46ce6f8e351898cf6",
  "main.6f53af50d0e7edf76fc3.js.map": "743497f85f8f0a953b71f79b209e71a2",
  "manifest.5331242021cd9f5a0938.js": "47eec6f49052bf28a3bb60df3b78f274",
  "manifest.5331242021cd9f5a0938.js.map": "10b1aa3ca188e7d40c2fb3ea903710f1",
  "manifest.bc9f52edf87c052e960e4516d360c190.json": "bc9f52edf87c052e960e4516d360c190",
  "sw.js": "3c4344f69e4b84034159c67d8370ac6c",
  "vendors.9641a7591b585946bdac.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.9641a7591b585946bdac.js": "8383cf11c0f30b449e4b2ccd58499e6f",
  "vendors.9641a7591b585946bdac.js.map": "44b01f556fa384004ca3c9dfd7bc3698",
}
`;

exports[`Compiler (react) should build the example with config image-optimization-disabled.json 1`] = `
Object {
  "1.cee7ea9abce823baf990.css": "16e4925d2f0de443907834b33b46394b",
  "1.cee7ea9abce823baf990.js": "fb98bc73e5bf09820dfc71e9a694db43",
  "1.cee7ea9abce823baf990.js.map": "cb7e806928f6052db8e9c9ff6e395790",
  "2.bf18163718a8126bae33.js": "8f9d8e8c9db493b414bed4793cc4de65",
  "2.bf18163718a8126bae33.js.map": "22d805fbd9fa24f53b067e640c8c5a30",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "index.html": "d32cca1001d5341d1c74ddee6ac80625",
  "main.03d10cc98741821c8f44.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.03d10cc98741821c8f44.js": "61ea0610d112ac85dbbbf14c6f25f061",
  "main.03d10cc98741821c8f44.js.map": "c774234d2c22be1affb77b8b8e4388d1",
  "manifest.5331242021cd9f5a0938.js": "47eec6f49052bf28a3bb60df3b78f274",
  "manifest.5331242021cd9f5a0938.js.map": "10b1aa3ca188e7d40c2fb3ea903710f1",
  "sw.js": "a7d0695fdecc5fdcf7a7c1c64a0fc4a9",
  "vendors.9641a7591b585946bdac.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.9641a7591b585946bdac.js": "8383cf11c0f30b449e4b2ccd58499e6f",
  "vendors.9641a7591b585946bdac.js.map": "44b01f556fa384004ca3c9dfd7bc3698",
}
`;

exports[`Compiler (react) should build the example with config manifest.json 1`] = `
Object {
  "1.cee7ea9abce823baf990.css": "16e4925d2f0de443907834b33b46394b",
  "1.cee7ea9abce823baf990.js": "fb98bc73e5bf09820dfc71e9a694db43",
  "1.cee7ea9abce823baf990.js.map": "cb7e806928f6052db8e9c9ff6e395790",
  "2.bf18163718a8126bae33.js": "8f9d8e8c9db493b414bed4793cc4de65",
  "2.bf18163718a8126bae33.js.map": "22d805fbd9fa24f53b067e640c8c5a30",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "icon_128x128.deb0a118869f6d69fcc5e9852ad32d81.png": "deb0a118869f6d69fcc5e9852ad32d81",
  "icon_192x192.f5d0f0f2ed01fca7cb69e70f6af11529.png": "f5d0f0f2ed01fca7cb69e70f6af11529",
  "icon_256x256.4661d370dd248c9f9d48e78c8a07776d.png": "4661d370dd248c9f9d48e78c8a07776d",
  "icon_96x96.1c0003f895382900e1a8ce6fa0a1b672.png": "1c0003f895382900e1a8ce6fa0a1b672",
  "index.html": "d3be68af43f48e352b8e4c851f7df983",
  "main.03d10cc98741821c8f44.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.03d10cc98741821c8f44.js": "61ea0610d112ac85dbbbf14c6f25f061",
  "main.03d10cc98741821c8f44.js.map": "c774234d2c22be1affb77b8b8e4388d1",
  "manifest.5331242021cd9f5a0938.js": "47eec6f49052bf28a3bb60df3b78f274",
  "manifest.5331242021cd9f5a0938.js.map": "10b1aa3ca188e7d40c2fb3ea903710f1",
  "manifest.bc9f52edf87c052e960e4516d360c190.json": "bc9f52edf87c052e960e4516d360c190",
  "sw.js": "e3828b5bbacb124869f1c63517da7629",
  "vendors.9641a7591b585946bdac.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.9641a7591b585946bdac.js": "8383cf11c0f30b449e4b2ccd58499e6f",
  "vendors.9641a7591b585946bdac.js.map": "44b01f556fa384004ca3c9dfd7bc3698",
}
`;

exports[`Compiler (react) should build the example with config preload-lazy-chunks.json 1`] = `
Object {
  "1.cee7ea9abce823baf990.css": "16e4925d2f0de443907834b33b46394b",
  "1.cee7ea9abce823baf990.js": "fb98bc73e5bf09820dfc71e9a694db43",
  "1.cee7ea9abce823baf990.js.map": "cb7e806928f6052db8e9c9ff6e395790",
  "2.bf18163718a8126bae33.js": "8f9d8e8c9db493b414bed4793cc4de65",
  "2.bf18163718a8126bae33.js.map": "22d805fbd9fa24f53b067e640c8c5a30",
  "240683d2dd7c5a158ee48c70703a2a0a-1200.jpg": "240683d2dd7c5a158ee48c70703a2a0a",
  "5c917367a9adfba3f1e904ed920580be-600.jpg": "5c917367a9adfba3f1e904ed920580be",
  "8f42a999073e8fe5caf83406f0e1d690-1920.jpg": "8f42a999073e8fe5caf83406f0e1d690",
  "c29e3724f0ae14c777b61c09ee20e73b-300.jpg": "c29e3724f0ae14c777b61c09ee20e73b",
  "index.html": "1e83b3c35122019caa39490de855e96e",
  "main.6f53af50d0e7edf76fc3.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.6f53af50d0e7edf76fc3.js": "d7e363c289b315f46ce6f8e351898cf6",
  "main.6f53af50d0e7edf76fc3.js.map": "743497f85f8f0a953b71f79b209e71a2",
  "manifest.5331242021cd9f5a0938.js": "47eec6f49052bf28a3bb60df3b78f274",
  "manifest.5331242021cd9f5a0938.js.map": "10b1aa3ca188e7d40c2fb3ea903710f1",
  "sw.js": "83dd61556a839d052386aa26a6672ce5",
  "vendors.9641a7591b585946bdac.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.9641a7591b585946bdac.js": "8383cf11c0f30b449e4b2ccd58499e6f",
  "vendors.9641a7591b585946bdac.js.map": "44b01f556fa384004ca3c9dfd7bc3698",
}
`;

exports[`Compiler (react) should build the example with config prerender-disabled.json 1`] = `
Object {
  "1.cee7ea9abce823baf990.css": "16e4925d2f0de443907834b33b46394b",
  "1.cee7ea9abce823baf990.js": "fb98bc73e5bf09820dfc71e9a694db43",
  "1.cee7ea9abce823baf990.js.map": "cb7e806928f6052db8e9c9ff6e395790",
  "2.bf18163718a8126bae33.js": "8f9d8e8c9db493b414bed4793cc4de65",
  "2.bf18163718a8126bae33.js.map": "22d805fbd9fa24f53b067e640c8c5a30",
  "240683d2dd7c5a158ee48c70703a2a0a-1200.jpg": "240683d2dd7c5a158ee48c70703a2a0a",
  "5c917367a9adfba3f1e904ed920580be-600.jpg": "5c917367a9adfba3f1e904ed920580be",
  "8f42a999073e8fe5caf83406f0e1d690-1920.jpg": "8f42a999073e8fe5caf83406f0e1d690",
  "c29e3724f0ae14c777b61c09ee20e73b-300.jpg": "c29e3724f0ae14c777b61c09ee20e73b",
  "index.html": "b2b637a1ff3d847f4fb161d63296b782",
  "main.6f53af50d0e7edf76fc3.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.6f53af50d0e7edf76fc3.js": "d7e363c289b315f46ce6f8e351898cf6",
  "main.6f53af50d0e7edf76fc3.js.map": "743497f85f8f0a953b71f79b209e71a2",
  "manifest.5331242021cd9f5a0938.js": "47eec6f49052bf28a3bb60df3b78f274",
  "manifest.5331242021cd9f5a0938.js.map": "10b1aa3ca188e7d40c2fb3ea903710f1",
  "sw.js": "315ab521f3544bbeb6194b0381e6cf34",
  "vendors.9641a7591b585946bdac.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.9641a7591b585946bdac.js": "8383cf11c0f30b449e4b2ccd58499e6f",
  "vendors.9641a7591b585946bdac.js.map": "44b01f556fa384004ca3c9dfd7bc3698",
}
`;
